# 2Dframework

./: .gitignore  CMakeLists.txt  README.md  flake.nix  libTest.c  main.c
2Dframework/: CMakeLists.txt
2Dframework/baseLibs/database/: CMakeLists.txt
2Dframework/baseLibs/database/include/database/: database.h
2Dframework/baseLibs/database/src/: binary.c  database.c  text.c
2Dframework/baseLibs/randerer/: CMakeLists.txt
2Dframework/baseLibs/randerer/include/randerer/: mesh.h  randerer.h  texture.h  window.h
2Dframework/baseLibs/randerer/src/: randerer.c  shader.c  texture.c
2Dframework/include/2Dframework/: 2Dframework.h  background.h  entity.h  gameObject.h  ground.h  player.h  world.h
2Dframework/shaders/background/: fragment.glsl  vertex.glsl
2Dframework/src/: background.c  entity.c  gameObject.c  ground.c  player.c  world.c
docs/: 2Dframework.md  README.md  database.md  randerer.md
